[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CacheToolsUtils"
version = "10.4"
authors = [ { name = "Fabien Coelho", email = "cachetools.utils@coelho.net" } ]
description = "Cachetools Utilities"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">= 3.10"
dependencies = [ "cachetools" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules"
]


[project.urls]
repository = "https://github.com/zx80/cachetools-utils"
documentation = "https://zx80.github.io/cachetools-utils/"
issues = "https://github.com/zx80/cachetools-utils/issues"
package = "https://pypi.org/project/CacheToolsUtils/"

[tool.setuptools]
py-modules = [ "CacheToolsUtils" ]

[project.optional-dependencies]
dev = [
  "mypy", "pyright",
  # "types-redis", "types-cachetools",
  "black", "flake8", "ruff",
  "pytest", "coverage",
  "pymarkdownlnt",
]
doc = [ "mkdocs", "mkdocs-material", "mkdocstrings[python]" ]
crypt = [ "pycryptodome" ]
tests = [ "pymemcache", "redis" ]
pub = [ "build", "wheel", "twine" ]
