[metadata]
name = CacheToolsUtils
version = 6.0
author = Fabien Coelho
author_email = cachetools.utils@coelho.net
url = https://github.com/zx80/cachetools-utils
description = Cachetools Utilities
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://zx80.github.io/cachetools-utils/
    Issues = https://github.com/zx80/cachetools-utils/issues
    Package = https://pypi.org/project/CacheToolsUtils/
    Sources = https://github.com/zx80/cachetools-utils

[options]
py_modules =
    CacheToolsUtils
install_requires = cachetools
# not always necessary: pymemcache redis
